//https://dbdiagram.io/d
Table Timeline {
    id            int       [pk, increment]
    created_at    date      [not null]
    timeline_start date     [not null]
    timeline_end  date      [not null]
}

Table Project {
    id            int       [pk, increment]
    created_at    date      [not null]
    timeline_id   int       [ref: > Timeline.id, null]
    name          varchar(255) [not null]
    description   varchar(600)
}

Table EventType {
    id            int       [pk, increment]
    name          varchar(255) [unique, not null]
}

Table Event {
    id            int       [pk, increment]
    timeline_id   int       [ref: > Timeline.id, not null]
    created_at    date      [not null]
    start_date    date      [not null]
    end_date      date      [not null]
    name          varchar(255) [not null]
    description   varchar(600)
    type_id       int       [ref: > EventType.id, not null]
    financial_impact int     [not null]
    document_id   int       [null]
}

Table ProjectMember {
    id            int       [pk, increment]
    project_id    int       [ref: > Project.id, not null]
    user_id       int       [not null]
    role          varchar(255) [default: 'VIEWER', not null]
}

Enum Role {
    OWNER
    EDITOR
    VIEWER
}

// new
Table Timeline {
    id int [primary key]
    created_at datetime
    timeline_start date
    timeline_end date
}

Table Project {
    id int [primary key]
    created_at datetime
    timeline_id int [unique, ref: > Timeline.id]
    name varchar(255)
    description varchar(600)
}

Table EventType {
    id int [primary key]
    name varchar(255) [unique]
}

Table Event {
    id int [primary key]
    timeline_id int [ref: > Timeline.id]
    created_at datetime
    start_date date
    end_date date
    name varchar(255)
    description varchar(600)
    type_id int [ref: > EventType.id]
    financial_impact decimal(20,2) [default: 0]
    document_id int [null]
}

Table ProjectMember {
    id int [primary key]
    created_at datetime
    project_id int [ref: > Project.id]
    user_id int
    role varchar(255) [default: 'VIEWER']

    Indexes {
        (project_id, user_id) [unique]
    }
}

Ref: Project.timeline_id > Timeline.id
Ref: Event.timeline_id > Timeline.id
Ref: Event.type_id > EventType.id
Ref: ProjectMember.project_id > Project.id